# ic_fullstack_rust

./: Cargo.toml  README.md  Trunk.toml  dfx.json  package-lock.json  package.json  webpack.config.js
scripts/: deploy_local.sh
src/ic_fullstack_rust/: Cargo.toml
src/ic_fullstack_rust_assets/: Cargo.toml  index.html
src/ic_fullstack_rust_assets/src/: index.html  index.js  lib.rs  main.rs
